# warren

./: .gitignore  Cargo.toml  README.md
machine/: Cargo.toml
machine/src/: knowledge.rs  lib.rs  machine.rs  operation.rs  program.rs  query.rs  statement.rs  storage.rs  term_builder.rs
machine/src/test_utils/: ast.rs
repl/: Cargo.toml  README.md
repl/src/: ast.rs  context.rs  main.rs  parser.rs
